--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,19 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+# Android Studio
+*.iml
+.idea
+.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+
+
+
+
+
+
 # =========================
 # Operating System Files
 # =========================
@@ -46,3 +59,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /Server/BloomServer/nbproject/private/
+Client/Bloom/.idea/vcs.xml
